# shaped-core

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  cspell.config.yaml  dev.py
libs/base/clean-core/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/base/clean-core/cmake/: DetectLinker.cmake  DetectStacktraceLib.cmake
libs/base/clean-core/docs/: Build Setup Debugging.md  Coding Guidelines.md  _index.md  async.md  blessed-stdlib-headers.md  customization-points.md  writing-a-stream.md
libs/base/clean-core/docs/benchmarks/: allocation-benchmark.md  file-stream-benchmark.md  hash-benchmark.md  string-hash-benchmark.md
libs/base/clean-core/docs/slides/: async.html
libs/base/clean-core/docs/systems/: allocation.md  async.md  node-allocation.md
libs/base/clean-core/scripts/: plot-node-allocation-design.py
libs/base/clean-core/src/clean-core/: allocation.cc  allocation.hh  array.hh  assert-handler.hh  assert.cc  assert.hh  assertf.hh  asserts.hh  bit.hh  bitset.hh  fixed_array.hh  flags.hh  function_ref.hh  fwd.hh  hash.cc  hash.hh  macros.hh  map.hh  mutex.hh  native.cc  native.hh  node_allocation.cc  node_allocation.hh  (+23 more)
libs/base/clean-core/tests/: allocation-test.cc  array-test.cc  assert-test.cc  async-pool-test.cc  async-test.cc  bit-test.cc  conversion-test.cc  fixed-array-test.cc  format-test.cc  function_ref-test.cc  hash-test.cc  hash-types-test.cc  hash128-test.cc  invocable-test.cc  macros-test.cc  mutex-test.cc  node_allocation-test.cc  optional-test.cc  pinned_data-test.cc  print-test.cc  random-test.cc  result-test.cc  small_vector-test.cc  span-test.cc  strided_span-test.cc  string-test.cc  string_view-test.cc  thread-test.cc  threaded_actor-test.cc  to_debug_string-test.cc  unique_function-test.cc  utility-test.cc  vector-test.cc
libs/base/nexus/: CMakeLists.txt  cheat-sheet.md
libs/base/nexus/cmake/: NexusWebRunner.cmake
libs/base/nexus/docs/: catch2-runner-compat.md  fuzz-testing.md  invocable-tests.md  stdlib-migration.md
libs/base/nexus/tests/: bench-cache-traversal-test.cc  bench-hardware-counters-test.cc  fuzz-engine-test.cc  fuzz-minimize-test.cc  fuzz-regression-test.cc  fuzz-value-test.cc  test-alias-test.cc  test-api-test.cc  test-check-test.cc  test-export-test.cc  test-invocable-test.cc  test-registry-test.cc  test-section-test.cc  test-typed-value-test.cc
libs/base/nexus/web/: nexus-web-driver.js  nexus-web-page.html.in
libs/base/typed-geometry/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/base/typed-geometry/docs/: TODO.md  _index.md  coding-guidelines.md  structure.md
libs/base/typed-geometry/tests/: angle-test.cc  approx.hh  comp-test.cc  mat-test.cc  pos-test.cc  quat-test.cc  scalar-test.cc  vec-test.cc
libs/graphics/shaped-graphics/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/graphics/shaped-graphics/docs/: TODO.md  _index.md  coding-guidelines.md  render-routines.md  shaders.md  structure.md  testing.md
libs/graphics/shaped-graphics/tests/: bytes_future-test.cc  shader-test.cc  smoke-test.cc  views-test.cc
libs/graphics/shaped-rendering/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/graphics/shaped-rendering/docs/: TODO.md  _index.md  coding-guidelines.md  imgui.md  render-routines.md  structure.md
libs/graphics/shaped-rendering/shaders/: imgui.hlsl
libs/graphics/shaped-rendering/tests/: dx12-routine-test.cc  fake_routines.hh  framework-test.cc  imgui-input-test.cc  imgui-manual-test.cc  imgui-registry-test.cc  imgui-renderer-test.cc  imgui-routine-test.cc  imgui-style-test.cc  input-dispatch-test.cc  input-test.cc  input-translation-test.cc  smoke-test.cc  window-manual-test.cc  window-test.cc
libs/graphics/shaped-shader-compiler-dxc/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/graphics/shaped-shader-compiler-dxc/tests/: compile-test.cc  end-to-end-cube-window-test.cc  end-to-end-inline-constants-test.cc  end-to-end-inline-raytracing-test.cc  end-to-end-multigroup-test.cc  end-to-end-raster-stages-test.cc  end-to-end-raster-test.cc  end-to-end-raytraced-cube-window-test.cc  end-to-end-raytracing-test.cc  end-to-end-sampler-test.cc  preprocess-test.cc  reflect-raytracing-test.cc  shader_cache-test.cc
libs/graphics/shaped-shader-library/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/graphics/shaped-shader-library/cmake/: GenerateShaderPackage.cmake  ShaderPackage.cmake
libs/graphics/shaped-shader-library/docs/: _index.md  coding-guidelines.md  structure.md
libs/graphics/shaped-shader-library/tests/: dxc_compiler-test.cc  fake_compiler.hh  hot_reload-test.cc  shader_library-test.cc  shader_package-test.cc
libs/graphics/shaped-viewer/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/graphics/shaped-viewer/docs/: TODO.md  _index.md  coding-guidelines.md  structure.md
libs/graphics/shaped-viewer/tests/: smoke-test.cc
libs/io/babel-serializer/: CMakeLists.txt  cheat-sheet.md  readme.md
libs/io/babel-serializer/docs/: _index.md  coding-guidelines.md  structure.md
tools/instruction-tracer/: CMakeLists.txt  embed-html-assets.py  readme.md  self-test.py
tools/instruction-tracer/fixture/: main.cc
tools/instruction-tracer/src/instruction-tracer/: main.cc
tools/instruction-tracer/tests/cli/: options-test.cc  target_spec-test.cc
tools/instruction-tracer/tests/debug/: module_registry-test.cc
tools/instruction-tracer/tests/decode/: instruction_decoder-test.cc  memory_access-test.cc
tools/instruction-tracer/tests/report/: console-test.cc  html_export-test.cc  json_reader-test.cc  mca-test.cc  memory-test.cc  source_view-test.cc  trace_formatter-test.cc  trace_stats-test.cc
tools/shaped-linter/: CMakeLists.txt  readme.md
tools/shaped-linter/docs/: architecture.md  writing-a-rule.md
tools/shaped-linter/src/shaped-linter/: fwd.hh  main.cc
tools/shaped-linter/tests/cli/: options-test.cc
tools/shaped-linter/tests/lex/: lexer-test.cc  source_buffer-test.cc
tools/shaped-linter/tests/parse/: parser-test.cc
tools/shaped-linter/tests/rules/: engine-test.cc  member_default_init_assignment-test.cc
(+846 files in other folders)
